@@ -14,6 +14,8 @@ Current Version (SVN trunk):
 
 - Added resolution writing in image files (#2891)
 
+- Try to save resolution values to GeoTIFF via GDAL (#2891)
+
 - Refactor legend icon drawing (remove renderer specific versions)
   Add label styling or markers for annotation layer legend icons (#2917)
 
